# GuangSicbo

./: README.md
gsicbo-api-server/: .env-cmdrc  .eslintrc.json  .jsbeautifyrc  README.md  ecosystem.config.js  package.json  test.config.js
gsicbo-api-server/src/: app.js  rest.js  socket.js
gsicbo-api-server/src/libs/: config.js  db.js
gsicbo-api-server/src/models/: games.js  index.js  leaders.js  orders.js  stakings.js  users.js
gsicbo-client/: README.md  package-lock.json  package.json
gsicbo-client/public/: index.html
gsicbo-client/src/: App.vue  main.js  router.js  store.js
gsicbo-client/src/components/: Appbar.vue  Bonus.vue  Drawer.vue  Footer.vue  HowToModal.vue  LanguageSelector.vue  Referral.vue
gsicbo-client/src/js/: base62.js  chain.js  endpoint.js  sicbo-data.js  sicbo.js  socket.js
gsicbo-client/src/languages/: en.js  ko.js  tr.js  zh.js
gsicbo-contract/: README.md
gsicbo-contract/tazchipstore/: CMakeLists.txt  tazchipstore.cpp
gsicbo-contract/tazgamehouse/: CMakeLists.txt  tazgamehouse.cpp
gsicbo-contract/tazgsicbobet/: CMakeLists.txt  logger.hpp  tazgsicbobet.cpp
gsicbo-contract/tazgsicborev/: CMakeLists.txt  tazgsicborev.cpp
gsicbo-contract/taztokenbase/: CMakeLists.txt  taztokenbase.cpp  taztokenbase.hpp
gsicbo-contract/taztokenstak/: CMakeLists.txt  logger.hpp  taztokenstak.cpp
gsicbo-tracer/: .env-cmdrc  .jsbeautifyrc  README.md  ecosystem.config.js  nodemon.json  package.json  test.config.js
gsicbo-tracer/src/: app.js  chain.js  chipper.js  crawler.js  dealer.js  recorder.js  staker.js
(+26 files in other folders)
